# NetScanAI

./: .replit  CHANGELOG.md  CONTRIBUTING.md  Pasted-Incorporating-Unit-Testing-Integration-Testing-Code-Coverage-Analysis-Control-Flow-Testing-and-D-1734063859173.txt  Pasted-Project-File-Structure-To-keep-the-project-organized-let-s-follow-a-modular-structure-that-allows--1734063846958.txt  README.md  app.py  pyproject.toml  requirements.txt  routes.py
cache/: scan_cache.json
core/: ai_analysis.py  cache.py  scanner.py  ssl_checker.py
static/css/: custom.css
static/js/: scanner.js
templates/: base.html  index.html  results.html
